# Property_program_project

./: .gitignore  CHANGELOG.md  LICENSE.md  Makefile  Property_program_project.c  README.md  RealEstate.spec  SOLVE_DLL_ISSUE.md  TROUBLESHOOTING.md  build_lib.bat  build_lib_win64.bat  check_system.py  compile_lib.py  compile_lib_win32.bat  entry_point.py  example.py  fix_dll.py  fix_dll_issue.py  pyproject.toml  real_estate.db-shm  real_estate.db-wal  rebuild_dll.py  replace_headers.py  requirements.txt  run.py  run_mock.py  settings.json  setup.py  setup_dll_from_source.py  setup_property.py  simple_lib.c  verify_gate_review.py  version_info.txt
app/: main.py
bridge/: __init__.py  bridge_setup.py  commercial_bridge.py  final_test.py  land_bridge.py  lib_handler.py  mock_lib.py  property_bridge.py  residential_bridge.py  setup.py  simple_test.py  (+4 more)
core/: CMakeLists.txt
core/include/: audit_repo.h  db_connection.h  logger.h  migrations.h  property_repo.h  re_core.h  re_types.h  services.h  user_repo.h
core/migrations/: 0001_initial.sql  0002_report_views.sql  0003_add_search_indices.sql  0004_rbac.sql  0005_hardening.sql
core/src/api/: exports.c
core/src/dto/: dto_validators.c  json_parser.c
core/src/errors/: error_handler.c
core/src/models/: property_model.h  user_model.h
core/src/repository/: audit_repo.c  db_connection.c  migrations.c  property_repo.c  user_repo.c
core/src/services/: auth_service.c  property_service.c  report_service.c
core/tests/test_repositories/: test_db_connection.c  test_migrations.c
core/tests/test_services/: test_auth.c
(+158 files in other folders)
